--- a/random_forest.ipynb
+++ b/random_forest.ipynb
@@ -104,14 +104,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.9860204081632653 0.8942857142857142\n"
+      "0.9860204081632653 0.8952380952380953\n"
      ]
     }
    ],
@@ -22856,12 +22856,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pickle\n",
-    "pickle.dump(rfc, open('./models/rf/first_try', 'wb'))\n",
+    "pickle.dump(rfc, open('./models/rf/train_prep_full', 'wb'))\n",
     "loaded_model = pickle.load(open('./models/rf/first_try', 'rb'))"
    ]
   },
