--- a/voter.ipynb
+++ b/voter.ipynb
@@ -145,7 +145,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "results['words'] = [-1] * len(results)"
+    "results['filter'] = [-1] * len(results)\n",
+    "results['indi'] = [-1] * len(results)\n",
+    "results['save'] = [-1] * len(results)"
    ]
   },
   {
@@ -306,7 +308,14 @@
     "        a = line.split('\\'')\n",
     "        type = a[1]\n",
     "        indicators = a[2].split()\n",
-    "        type_indicators[type] = indicators"
+    "        type_indicators[type] = indicators\n",
+    "save_indicators = {}\n",
+    "with open('data/save_indicators.txt', 'r') as f:\n",
+    "    for line in f:\n",
+    "        a = line.split('\\'')\n",
+    "        type = a[1]\n",
+    "        indicators = a[2].split()\n",
+    "        save_indicators[type] = indicators"
    ]
   },
   {
@@ -329,11 +338,31 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def save_indicating(text):\n",
+    "    pred = []\n",
+    "    for type in types:\n",
+    "        for indicator in save_indicators[type]:\n",
+    "            if indicator in text:\n",
+    "                pred.append(type)\n",
+    "    if len(pred) > 0:\n",
+    "        return pred[-1]\n",
+    "    else:\n",
+    "        return -1"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 93,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df['filter'] = df.text_features.apply(indicating)"
+    "df['filter'] = df.text_features.apply(filtering)\n",
+    "df['indicating'] = df.text_features.apply(indicating)\n",
+    "df['save'] = df.text_features.apply(save_indicating)"
    ]
   },
   {
@@ -351,7 +380,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df['filter'] = df['filter'].apply(lambda x: type_lookup[type_lookup.english == x].index[0] if x != -1 else -1)"
+    "df['filter'] = df['filter'].apply(lambda x: type_lookup[type_lookup.english == x].index[0] if x != -1 else -1)\n",
+    "df['indicating'] = df['indicating'].apply(lambda x: type_lookup[type_lookup.english == x].index[0] if x != -1 else -1)\n",
+    "df['save'] = df['save'].apply(lambda x: type_lookup[type_lookup.english == x].index[0] if x != -1 else -1)"
    ]
   },
   {
@@ -362,7 +393,9 @@
    "source": [
     "for index, item in df.iterrows():\n",
     "        if index in results.index:\n",
-    "            results.loc[index].words = item['filter']"
+    "            results.loc[index].filter = item['filter']\n",
+    "            results.loc[index].indi = item['indicating']\n",
+    "            results.loc[index].save = item['save']"
    ]
   },
   {
@@ -485,6 +518,8 @@
    "source": [
     "from statistics import mode\n",
     "def vote(predictions):\n",
+    "    if predictions[0] != -1:\n",
+    "        return predictions[0]\n",
     "    if -1 in predictions: predictions.remove(-1)\n",
     "    return mode(predictions)"
    ]
@@ -495,7 +530,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "results['prediction'] = results.apply(lambda row: vote([row.xg,row.rf,row.words,row.emb]), axis=1)"
+    "results['prediction'] = results.apply(lambda row: vote([row.save,row.xg,row.rf,row.words,row.emb]), axis=1)"
    ]
   },
   {
@@ -688,7 +723,7 @@
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"
+    "hash": "916dbcbb3f70747c44a77c7bcd40155683ae19c65e1c03b4aa3499c5328201f1"
    }
   }
  },
