--- a/untis_sizes.ipynb
+++ b/untis_sizes.ipynb
@@ -1,70 +1,20 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Imports & Settings\n"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Imports\n",
-    "import pandas as pd\n",
-    "import numpy as np\n",
-    "from matplotlib import pyplot as plt\n",
-    "from deep_translator import GoogleTranslator\n",
-    "import re \n",
-    "from math import isnan\n",
-    "\n",
-    "pd.set_option(\"display.max_columns\", None)\n",
-    "pd.set_option(\"display.max_colwidth\", None)\n",
-    "pd.set_option('display.max_rows', None)\n",
-    "pd.set_option('display.max_seq_items', None)"
+    "from setup_general import *"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/tmp/ipykernel_6336/1699356385.py:9: DtypeWarning: Columns (13,266) have mixed types. Specify dtype option on import or set low_memory=False.\n",
-      "  prep = pd.read_csv('data/prep.csv', index_col='id', dtype={'type': str})\n"
-     ]
-    }
-   ],
-   "source": [
-    "# dtype={'type': str} prevents being confused with data type for large data sets\n",
-    "train = pd.read_csv('data/train.csv', index_col='id', dtype={'type': str})\n",
-    "test = pd.read_csv('data/test.csv', index_col='id', dtype={'type': str})\n",
-    "train_translated = pd.read_csv('data/train_translated.csv', dtype={'type': str})\n",
-    "test_translated = pd.read_csv('data/test_translated.csv', index_col='id', dtype={'type': str})\n",
-    "combined_data = pd.read_csv('data/combined_data.csv', index_col='id', dtype={'type': str})\n",
-    "combined_data_translated = pd.read_csv('data/combined_data_translated.csv', index_col='id', dtype={'type': str})\n",
-    "combined_data_fully_translated = pd.read_csv('data/combined_data_fully_translated.csv', index_col='id', dtype={'type': str})\n",
-    "prep = pd.read_csv('data/prep.csv', index_col='id', dtype={'type': str})"
-   ]
-  },
-  {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Parameter & Unit & Value"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Finish unit tranlation/ unification &  values to float"
+    "# Finish unit translation/ unification &  values to float"
    ]
   },
   {
@@ -73,34 +23,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = prep.copy()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 194,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data['value'] = data['value'].apply(lambda x: float(x.replace(',', '.')) if type(x) == str else x)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 196,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "data = prep.copy()\n",
+    "data['value'] = data['value'].apply(lambda x: float(x.replace(',', '.')) if type(x) == str else x)\n",
     "data.to_csv('data/prep.csv')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 209,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data = prep.copy()"
    ]
   },
   {
@@ -109,20 +34,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "data = prep.copy()\n",
+    "\n",
     "# e.g wrong translation\n",
     "data['unit'] = data['unit'].replace('e.g','mm')\n",
     "data['unit'] = data['unit'].replace('pc','pieces')\n",
     "data['unit'] = data['unit'].replace('page','pages')\n",
     "# unify units\n",
-    "data['unit'] = data['unit'].replace('10 x 15 cm','100 x 150 mm')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 211,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "data['unit'] = data['unit'].replace('10 x 15 cm','100 x 150 mm')\n",
+    "\n",
     "data.to_csv('data/prep.csv')"
    ]
   },
@@ -139,42 +59,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = prep.copy()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 297,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data['value'] = data.apply(lambda item: item['value'] / 10 if item['unit'] == 'mm' else item['value'], axis=1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 298,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data['unit'] = data['unit'].replace('mm','cm')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 299,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data['value'] = pd.to_numeric(data['value'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 301,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "data = prep.copy()\n",
+    "\n",
+    "\n",
+    "data['value'] = data.apply(lambda item: item['value'] / 10 if item['unit'] == 'mm' else item['value'], axis=1)\n",
+    "data['unit'] = data['unit'].replace('mm','cm')\n",
+    "data['value'] = pd.to_numeric(data['value'])\n",
+    "\n",
     "data.to_csv('data/prep.csv')"
    ]
   },
@@ -187,26 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 303,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data = prep.copy()"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 304,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data['unit'] = data['unit'].replace(np.nan,'*')\n",
-    "data['parameter'] = data['parameter'].replace(np.nan,'*')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 305,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -214,24 +86,8 @@
     "    if ' x ' in item:\n",
     "        return item + '²'\n",
     "    else:\n",
-    "        return item"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 306,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data['unit'] = data['unit'].apply(lambda x: get_squared(x))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 307,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "        return item\n",
+    "\n",
     "def extract_width_height_from_unit_to_value(item):\n",
     "    unit = item[0]\n",
     "    value = item[1]\n",
@@ -249,30 +105,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 308,
+   "execution_count": 306,
    "metadata": {},
    "outputs": [],
    "source": [
+    "data = prep.copy()\n",
+    "\n",
+    "data['unit'] = data['unit'].replace(np.nan,'*')\n",
+    "data['parameter'] = data['parameter'].replace(np.nan,'*')\n",
+    "data['unit'] = data['unit'].apply(lambda x: get_squared(x))\n",
     "# execution order is important\n",
     "data['value'] = data.apply(lambda item: extract_width_height_from_unit_to_value(item[['unit','value']])[1], axis=1)\n",
-    "data['unit'] = data.apply(lambda item: extract_width_height_from_unit_to_value(item[['unit','value']])[0], axis=1)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 309,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data['parameter_and_unit'] = data['parameter'] + ' IN ' + data['unit']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 313,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "data['unit'] = data.apply(lambda item: extract_width_height_from_unit_to_value(item[['unit','value']])[0], axis=1)\n",
+    "data['parameter_and_unit'] = data['parameter'] + ' IN ' + data['unit']\n",
+    "\n",
     "data.to_csv('data/prep.csv')"
    ]
   },
@@ -285,39 +131,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 315,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data = prep.copy()"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 316,
    "metadata": {},
    "outputs": [],
    "source": [
+    "data = prep.copy()\n",
+    "\n",
     "# parameter_and_unit turned into one hot encoded features\n",
-    "data= pd.get_dummies(data, columns=['parameter_and_unit'], prefix='', prefix_sep='')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 317,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "data= pd.get_dummies(data, columns=['parameter_and_unit'], prefix='', prefix_sep='')\n",
     "data.to_csv('data/prep.csv')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# now put values into one hot encoded features"
    ]
   },
   {
@@ -326,27 +148,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = prep.copy()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 320,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "# now put values into one hot encoded features\n",
+    "data = prep.copy()\n",
+    "\n",
     "# for all new \"parameter with unit\" columns put the value in the column where a 1 is - others are 0 and remain 0\n",
     "for column in data.columns:\n",
     "    if ' IN ' in column:\n",
-    "        data[column] = data.apply(lambda item: item['value'] * item[column], axis=1)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 322,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "        data[column] = data.apply(lambda item: item['value'] * item[column], axis=1)\n",
+    "\n",
     "data.to_csv('data/prep.csv')"
    ]
   },
@@ -359,16 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data = prep.copy()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -386,57 +186,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
+    "data = prep.copy()\n",
+    "\n",
     "for column in data.columns:\n",
     "    # all the parameter with unit columns that contain arrays that are represeted as strings\n",
     "    if (' IN ' in column) and (data[column].dtype == object):\n",
     "        data[column + '_height'] = data.apply(lambda item: extract_height_width(item[column])[0], axis=1)\n",
-    "        data[column + '_width'] = data.apply(lambda item: extract_height_width(item[column])[1], axis=1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "        data[column + '_width'] = data.apply(lambda item: extract_height_width(item[column])[1], axis=1)\n",
+    "\n",
     "for column in data.columns:\n",
     "    if (' IN ' in column):\n",
-    "        data[column] = data[column].replace(np.nan,0)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "        data[column] = data[column].replace(np.nan,0)\n",
+    "\n",
     "data.to_csv('data/prep.csv')"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# some more"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -455,7 +222,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.10.6 (main, Nov  2 2022, 18:53:38) [GCC 11.3.0]"
   },
   "orig_nbformat": 4,
   "vscode": {
